<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:textColor="@color/AppTitleText"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/eye"
        android:contentDescription="@string/app_name" />

    <TableLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/drinks"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/drinks1"
                android:contentDescription="@string/category1" />

            <ImageView
                android:id="@+id/foods"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/foods1"
                android:contentDescription="@string/category2" />

            <ImageView
                android:id="@+id/fruits"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fruits1"
                android:contentDescription="@string/category3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent" />

    </TableLayout>

</LinearLayout>